--- a/frontend/css/navbar.css
+++ b/frontend/css/navbar.css
@@ -22,8 +22,8 @@
 .nav-item {
     background-color: #f2f2f2;
     margin-right: 0.625em;
-    padding: 0.625em 1.25em;
-    border-radius: 1.25em;
+    padding: 0.375em 0.75em;
+    border-radius: 0.75em;
     transition: background-color 0.3s ease;
     display: flex;
     justify-content: center;
@@ -33,7 +33,8 @@
 .nav-item a {
     color: #2c3e50;
     text-decoration: none;
-    font-weight: 600;
+    font-size: 1em;
+    white-space: nowrap;
 }
 
 .nav-item:hover {
