--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,3 +1,21 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content {
+    flex-grow: 1;
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
+#footer {
+    width: 100%;
+}
+
 h1 {
     text-align: center;
 }
