style: Add sheet color

--- a/frontend/css/person.css
+++ b/frontend/css/person.css
@@ -7,3 +7,11 @@
     box-sizing: border-box;
     width: 45%;
 }
+
+tr:nth-child(even) {
+    background-color: #adabab;
+}
+
+tr:nth-child(odd) {
+    background-color: #ffffff;
+}
