--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    background-color: #f8f8f8;
 }
 
 .main-content {
@@ -19,6 +20,7 @@ body {
 h1 {
     text-align: center;
 }
-tr{
+
+tr {
     text-align: center;
 }
