Frontend: Footer.html: Update style

--- a/frontend/css/footer.css
+++ b/frontend/css/footer.css
@@ -11,3 +11,10 @@ footer {
     color: #bbb;
     text-align: center;
 }
+
+.footer-content a {
+    margin: 0;
+    padding: 0;
+    color: #bbb;
+    text-align: center;
+}
