--- a/frontend/css/person.css
+++ b/frontend/css/person.css
@@ -29,7 +29,7 @@ tbody tr:nth-child(odd) {
     display: none;
     margin-top: 5em;
     margin-bottom: 5em;
-    border: 1px solid black;
+    border: 1px solid #ffffff;
     border-radius: 0.5em;
     background-color: #ffffff;
 }
