--- a/frontend/css/class.css
+++ b/frontend/css/class.css
@@ -1,5 +1,61 @@
+.class-selection-div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.class-selection-div .select-group {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.class-selection-div label {
+    margin-bottom: 5px;
+}
+
+.class-selection-div select {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
+
+.button-group {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+.button-group button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button-group button:hover {
+    background-color: #0056b3;
+}
+
+.button-group button:disabled {
+    background-color: #ddd;
+    color: gray;
+    cursor: not-allowed;
+}
+
 .basic-info-div {
     display: none;
+    float: right;
+    background-color: #ddd;
 }
 
 .class-analysis-table-note {
