--- a/frontend/css/person.css
+++ b/frontend/css/person.css
@@ -1,3 +1,59 @@
+.student-selection-div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 20px;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.student-selection-div .select-group,
+.student-selection-div .button-group {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.student-selection-div label {
+    margin-bottom: 5px;
+}
+
+.student-selection-div select,
+.student-selection-div input {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+}
+
+.button-group {
+    display: flex;
+    justify-content: center;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+.button-group button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button-group button:hover {
+    background-color: #0056b3;
+}
+
+.button-group button:disabled {
+    background-color: #ddd;
+    color: gray;
+    cursor: not-allowed;
+}
+
 .student-score-table-note {
     float: right;
     font-size: 0.8em;
