Frontend: class.html: Update style

--- a/frontend/css/class.css
+++ b/frontend/css/class.css
@@ -63,27 +63,6 @@
     font-size: 0.8em;
 }
 
-.total-chart-container {
-    display: flex;
-}
-
-.first-chart-container {
-    display: flex;
-}
-
-.last-chart-container {
-    display: flex;
-}
-
-.chart-container {
-    flex: 1 1;
-}
-
-table {
-    border-collapse: collapse;
-    width: 100%;
-}
-
 table,
 th,
 td {
@@ -106,4 +85,54 @@ tbody tr:nth-child(even) {
 
 tbody tr:nth-child(odd) {
     background-color: #ffffff;
+}
+
+.subject-selection-div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2em;
+}
+
+.subject-selection-div button {
+    margin-left: 1em;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    color: #ffffff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.subject-selection-div button:hover {
+    background-color: #0056b3;
+}
+
+.subject-selection-div button:disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+}
+
+.total-chart-container {
+    display: flex;
+}
+
+.first-chart-container {
+    display: flex;
+}
+
+.last-chart-container {
+    display: flex;
+}
+
+.chart-container {
+    flex: 1 1;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
 }
