--- a/frontend/css/data.css
+++ b/frontend/css/data.css
@@ -25,3 +25,21 @@ button:disabled {
     background-color: #ddd;
     cursor: not-allowed;
 }
+
+.styled-select-div {
+    margin-bottom: 10px;
+}
+
+.styled-select {
+    padding: 0.3em 0.6em;
+    font-size: 0.8em;
+    padding: 0.5em 1em;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    appearance: none;
+}
+
+.download-button-div {
+    margin-top: 20px;
+}
